--- a/app/src/main/res/layout/activity_audio_video_list.xml
+++ b/app/src/main/res/layout/activity_audio_video_list.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorBackground"
     android:layout_height="match_parent"
     tools:context=".AudioVideoList">
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:background="#fff"
         android:layout_height="match_parent"
         android:id="@+id/recyclerView">
 
