--- a/app/src/main/res/layout/grid_audio_video_list_items.xml
+++ b/app/src/main/res/layout/grid_audio_video_list_items.xml
@@ -47,7 +47,7 @@
         android:layout_centerHorizontal="true"
         android:text="VLC-23HFK7X"
         android:textSize="17dp"
-        android:textColor="#212121"
+        android:textColor="@color/textColor"
         android:layout_marginRight="10dp"
         android:layout_toLeftOf="@+id/moreOptions"
         android:layout_below="@+id/cardView"
