--- a/app/src/main/res/layout/activity_audio_video_folders.xml
+++ b/app/src/main/res/layout/activity_audio_video_folders.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorBackground"
     android:layout_height="match_parent">
 
     <FrameLayout
@@ -21,7 +22,7 @@
         android:layout_marginEnd="0dp"
         app:itemIconTint="@drawable/bottom_bar_items_color"
         app:itemTextColor="@drawable/bottom_bar_items_color"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/colorNavbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
