--- a/app/src/main/res/layout/audio_video_folders_items.xml
+++ b/app/src/main/res/layout/audio_video_folders_items.xml
@@ -18,7 +18,7 @@
         android:text="Whatsapp Videos"
         android:textSize="17dp"
         android:layout_marginTop="10dp"
-        android:textColor="#212121"
+        android:textColor="@color/textColor"
         android:layout_toRightOf="@+id/folderIcon"
         android:paddingLeft="10dp"
         android:layout_marginLeft="6dp"></TextView>
