--- a/app/src/main/res/layout/grid_audio_video_folders_items.xml
+++ b/app/src/main/res/layout/grid_audio_video_folders_items.xml
@@ -21,7 +21,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/folderIcon"
         android:text="Whatsapp"
-        android:textColor="#212121"
+        android:textColor="@color/textColor"
         android:textSize="15dp"></TextView>
 
     <TextView
