--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -1,9 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AboutUs">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:layout_margin="10dp"
+        android:textSize="20dp"
+        android:id="@+id/logo"
+        android:layout_marginTop="35dp"
+        android:textColor="@color/textColor"
+        android:text="Play"></TextView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:textSize="15dp"
+        android:layout_below="@+id/logo"
+        android:text="We are providing many features related to audio and video in single app including WhatsApp status saving, downloading Facebook / Instagram videos directly in this app. Also many more features are available."
+        android:id="@+id/featuresText"
+        android:layout_margin="10dp"
+        android:textColor="@color/textColor"></TextView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:layout_margin="10dp"
+        android:textSize="20dp"
+        android:layout_below="@+id/featuresText"
+        android:id="@+id/developer"
+        android:layout_marginTop="45dp"
+        android:textColor="@color/textColor"
+        android:text="Developers"></TextView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:textSize="15dp"
+        android:layout_below="@+id/developer"
+        android:layout_margin="10dp"
+        android:text="Play developed by many new talented developers and offered by prog2app."
+        android:id="@+id/pointsText"
+        android:textColor="@color/textColor"></TextView>
+    <com.google.android.ads.nativetemplates.TemplateView
+        android:id="@+id/my_template"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone"
+        app:gnt_template_type="@layout/gnt_medium_template_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
